--- a/public/css/packages/editor.custom-form.css
+++ b/public/css/packages/editor.custom-form.css
@@ -3,16 +3,20 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/*  
+/*
     Created on : 06 Apr 2017, 2:52:26 PM
     Author     : ZakS
-    For editors that use the custom template option 
+    For editors that use the custom template option
 */
 
 .modal-multi-columns div.custom-editor {
     display: flex;
     flex-flow: row wrap;
     flex-direction: row;
+    width: 100%;
+}
+
+.custom-editor{
     width: 100%;
 }
 
