--- a/public/css/packages/editor.multi-columns.css
+++ b/public/css/packages/editor.multi-columns.css
@@ -3,9 +3,9 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : Sep 4, 2016, 11:57:11 AM
-    Author     : ZakS 
+    Author     : ZakS
 */
 
 div.modal-multi-columns > .modal-dialog {
@@ -30,6 +30,7 @@ div.modal-multi-columns > .modal-dialog div.DTE_Body div.DTE_Body_Content div.DT
     width: 50%;
     padding: 5px 5px;
     box-sizing: border-box;
+    float: left;
 }
 
 div.modal-multi-columns > .modal-dialog div.DTE_Body div.DTE_Form_Content {
